Add mentor records feature
